<resources>
    <string name="app_name">NexoApp</string>

    <string name="p400_plus" translatable="false">P400 PLUS</string>
    <string name="v240m_plus" translatable="false">V240m PLUS</string>
    <string name="v400c_plus" translatable="false">V400c PLUS</string>
    <string name="v400m" translatable="false">V400m</string>

    <string name="select_terminal">Select Terminal</string>
    <string name="serial_number">Serial Number</string>
    <string name="ip_address">IP Address</string>
    <string name="start_payment">Start Payment</string>
    <string name="start_refund">Refund</string>
    <string name="change_payment_type">Type</string>

    <string name="amount_hint">10.99</string>
    <string name="currency_hint">EUR</string>

    <string name="state_idle_status">Idle</string>
    <string name="state_in_progress_status">In Progress</string>
    <string name="state_complete_status">Transaction completed</string>
    <string name="state_error_status_format">An error has occurred.\n%s</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string-array name="transaction_types">
        <item>Payment</item>
        <item>RefundToACard</item>
    </string-array>
</resources>
