<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_inset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_inset"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/state_idle_status"/>

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/currencyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_hint"
            android:inputType="text|textCapCharacters" />

    </LinearLayout>

    <Button
        android:id="@+id/startPaymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/start_payment" />

</FrameLayout>
